@@ -4,6 +4,13 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
+06-Oct-2007 (Lars Duening) -- Release 3.2.16
+
+    - Other Changes:
+       + The mySQL configuration failed to handle less-standard standard
+         paths correctly.
+
+
 05-Oct-2007 (Lars Duening) -- Release 3.2.15
 
     - Changed efuns:
